--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -1,6 +1,7 @@
 {
   "AppSettings": {
     "Browser": "Chrome",
+    "Domain": "https://www.selenium.dev",
     "Options": {
       "Headless": true
     }
