--- a/TestProject/appsettings.json
+++ b/TestProject/appsettings.json
@@ -2,8 +2,8 @@
   "AppSettings": {
     "Browser": "Chrome",
     "Domain": "https://www.selenium.dev",
-    "Options": {
-      "Headless": true
+    "BrowserOptions": {
+      "Headless": false
     }
   }
 }
